--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,7 @@ name: Deploy Jekyll site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"] # T-ODO: change this to 'main'
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,18 +31,23 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1' # Not needed with a .ruby-version file
+          ruby-version: '3.1'
           bundler-cache: true # runs 'bundle install' and caches installed gems
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+      
+      # *** 这是被修正的步骤 ***
       - name: Build with Jekyll
-        run: bundle exec jekyll build --dest ./${{ steps.pages.outputs.base_path }}
+        # We explicitly build to the ./_site directory
+        run: bundle exec jekyll build --dest ./_site
+      
+      # *** 这是被修正的步骤 ***
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: ./${{ steps.pages.outputs.base_path }}
+          # Upload the ./_site directory
+          path: ./_site
 
   # Deployment job
   deploy:
