Restructure publications page with new categories and translations

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ main:
     url: /news/
   - title: "CV 简历"
     url: /cv/
-  - title: "Platform and Research Fellow 平台和伙伴"
+  - title: "Platform & Fellow 平台和伙伴"
     url: /platform/
