Fix broken CNKI links and bold author names

--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ repository: "arsbai/arsbai.github.io"
 author:
   # Biographic information
   avatar: "profile2.png"
-  name: "Zhaocheng Bai (白钊成)"
-  pronouns: "he/him"
+  name: "Zhaocheng Bai"
+  pronouns: "白钊成"
   bio: "PhD Candidate in Landscape Architecture. My research focuses on using intelligent technologies to study human-environment interactions—including perception, emotion, cognition, and behavior—and the environmental mechanisms and justice dimensions of human well-being."
   location: "Shanghai, China"
   employer: "CAUP of Tongji University"
